objects/wkcc__TableauReportLocalization__mdt.object
<CustomObject>
    <fields>
        <fullName>wkcc__Language__c</fullName>
        <description>User Language</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__LocalizedViewUrl__c</fullName>
        <description>URL for the location specific Tableau view</description>
        <label>Localized View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wkcc__PublicTableauUrl__c</fullName>
        <description>Public Tableau report URL</description>
        <label>Public Tableau URL</label>
        <type>Url</type>
    </fields>
    <label>Tableau Report Localization</label>
    <pluralLabel>Tableau Report Localizations</pluralLabel>
</CustomObject>